<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AppActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/avatar_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:src="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_name"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/postData"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        android:text="@string/post_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_data"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/post_data"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/postName"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.AppTheme.OptionsCheckBox"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:contentDescription="@string/options"
        app:icon="@drawable/ic_op"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,  postName, postData, options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_data"
        android:padding="5dp"
        android:text="@string/post_text"
        app:layout_constraintBottom_toTopOf="@id/video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="options, postText, video, buttonPlay" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:textColor="@color/gray"
        android:contentDescription="@string/like"
        app:icon="@drawable/ic_liked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBarrier2"
        tools:text="0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:textColor="@color/gray"
        android:contentDescription="@string/share"
        app:icon="@drawable/ic_shared"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/headerBarrier2"
        tools:text="0"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/viewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/viewing"
        android:padding="10dp"
        android:src="@drawable/ic_viewing"
        app:layout_constraintEnd_toStartOf="@+id/countViewing"
        app:layout_constraintTop_toTopOf="@id/headerBarrier2"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countViewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/count_viewing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/count_viewing"
        app:layout_constraintBottom_toBottomOf="@id/viewing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewing" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/video"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@id/headerBarrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_play_48"
        android:contentDescription="@string/enable_video"
        app:layout_constraintBottom_toBottomOf="@id/video"
        app:layout_constraintEnd_toEndOf="@id/video"
        app:layout_constraintStart_toStartOf="@id/video"
        app:layout_constraintTop_toTopOf="@id/video"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="video, buttonPlay"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/postGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="avatar, postName, postData, postText"/>

</androidx.constraintlayout.widget.ConstraintLayout>